# pytoshop-fix-packbits

./: pyproject.toml  requirements.txt  setup.py
pytoshop/: codecs.py
