[project]
name = "pytoshop-fix-packbits"
version = "1.1.8"
description = "A Python-based library to write Photoshop PSD files"
dependencies = [ "cython", "numpy>=1.11", "six", "packbits",]
readme = "README.rst"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Natural Language :: English",]
[[project.authors]]
name = "original author: Michael Droettboom, modified by: radius5"
email = "info@radius5.co.jp"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/radius5-study/pytoshop-fix-packbits"
Issues = "https://github.com/radius5-study/pytoshop-fix-packbitsissues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "pytoshop",]
